# WazeCargo

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  requirements.txt
dashboard-2.0/: .gitignore  package-lock.json  package.json
db_sql_scripts/: 00_create_ml_views.sql  02_duckdb_to_rds.py
docs/: architecture.md  er_ddl_reference.md  er_mermaid.md  er_plantuml.puml  presentation_16_03.md
ml/: 05_ml_train_evaluate.py  README.md  queries_ML.sql  requirements.txt
modeling/: 03_rebuild_clean_maritime.sh  04_ml_congestion.py  05_ml_commodity.py  INDEX.md  rebuild_clean_maritime.sh  rebuild_clean_maritime.sql  rebuild_clean_maritime_exports_patch.sh  rebuild_clean_maritime_imports.sh  requirements.txt  wz_ml_utils.py
notebooks/eda/: FILES.md  (+16 more)
pipeline/: 00_loading_to_raw.py  02_staging_to_structured.py  07_weather_ingest.py  operability_engine.py  ports_config.py  weather_api_client.py
production/: 03_ml_congestion.py  03_ml_congestion.sql  04_ml_commodity.py  INDEX.md  _nb_builder.py  build_01_eda.py  build_02_baseline.py  build_04_xgboost.py  build_05_random_forest.py  build_08_comparison.py  build_09_bugs_found.py  build_11_hybrid_ensemble.py  build_feature_cache.py  pyproject.toml  wz_ml_utils.py
production/_archive/notebook_builders/: README.md  build_07_prophet.py
production/notebooks/: 01_eda_port_congestion.ipynb  02_baseline_seasonal_naive.ipynb  03_lightgbm.ipynb  04_xgboost.ipynb  05_random_forest.ipynb  06_linear_models.ipynb  07_prophet.ipynb  08_model_comparison_2026.ipynb  09_bugs_found.ipynb
scrapers/: template_scraper.py  vf_ports.py
(+218 files in other folders)
