[project]
name = "waze-cargo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "statsmodels",
    "lightgbm",
    "xgboost",
    "scikit-learn",
    "prophet",
    "shap",
    "jupyter",
    "sqlalchemy",
    "psycopg2-binary",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["wz_ml_utils"]
